test/acceptance/parsing/failing/include-should-have-args.js
'use strict';

module.exports = require('spun-util').errors.ParseError;
